[package]
name = "teevee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
glob = "0.3.0"
rand = "0.8.5"
thiserror = "1.0"
log = "0.4.17"
simplelog = "0.12.0"
itertools = "0.10.5"

[dev-dependencies]
test-case = "2.2"
